# task4_cpp

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/student/: Student.cpp  Student.h
src/students_list/: StudentList.cpp  StudentList.h  StudentListNode.cpp  StudentListNode.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
